demo/kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: krunch-demo
spec:
  selector:
    app: krunch-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
